--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^19.2.4",
     "@angular/common": "^19.2.0",
     "@angular/compiler": "^19.2.0",
     "@angular/core": "^19.2.0",
@@ -21,6 +22,7 @@
     "@angular/router": "^19.2.0",
     "@angular/ssr": "^19.2.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "animation": "^0.1.3",
     "express": "^4.18.2",
     "ngx-cookie-service": "^19.1.2",
     "ngx-pagination": "^6.0.3",
